Bug#65030: Innodb_buffer_pool_pages_flushed reports incorrect number of flushed pages

The problem is that the internal counter for the number of flushed
pages (srv_buf_pool_flushed) was being incremented twice, once in
buf_flush_batch() and again in buf_flush_common().